--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/lockieluke/webby#readme",
   "devDependencies": {
-    "electron": "^10.0.0-beta.23",
+    "electron": "^10.1.2",
     "typescript": "^4.0.2",
     "v8-compile-cache": "^2.1.1"
   },
