Added Base Page Template for adding new pages

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "v8-compile-cache": "^2.1.1"
   },
   "dependencies": {
+    "electron-is-dev": "^1.2.0",
     "electron-store": "^6.0.0",
     "electron-window-manager": "^1.0.6",
     "pouchdb-node": "^7.2.2"
