--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo Testing",
     "build": "cd scripts && build-win.bat",
-    "start": "electron10 ."
+    "start": "electron ."
   },
   "repository": {
     "type": "git",
